--- a/views/main.ejs
+++ b/views/main.ejs
@@ -39,7 +39,7 @@
     <div class="container">
         <div class="row">
           <div class="col text-center">
-            <button class="btn btn-primary">Submit!</button>
+            <button type = "submit" class="btn btn-primary">Submit!</button>
           </div>
         </div>
       </div>
