added randomstore/test user params
lets go eat sometime :D

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -10,18 +10,13 @@
       </div>
       <div class="col-sm-3">
         <div class="form-group">
-            <label for="numLocation">Number of Locations</label>
-            <select class="form-control" name= userRequest[numLocation] id="numLocation">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-              <option>6</option>
-              <option>7</option>
-              <option>8</option>
-              <option>9</option>
-              <option>10</option>
+            <label for="distance">Distance from location (Miles)</label>
+            <select class="form-control" name= userRequest[distance] id="distance">
+              <option value= "8047">5</option>
+              <option value= "16094">10</option>
+              <option value= "24141">15</option>
+              <option value= "32187">20</option>
+              <option value= "39999">25</option>
             </select>
           </div>
       </div>
