added another parameter/ clean up
cleaned up some code

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -31,6 +31,12 @@
           </select>
         </div>
     </div>
+    <div class="row justify-content-center">
+      <div class="col-sm-3">
+          <label for="searchTerm">Seach By</label>
+          <input type="text" id="searchTerm" class="form-control" name= userRequest[searchTerm] placeholder="Ex: food/resturants/names">
+        </div>
+    </div>
     <div class="container">
         <div class="row">
           <div class="col text-center">
