--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,4 +1,11 @@
-<h1> <%= location %> </h1>
+<% include ./partials/header %>
+
+<h1> Your starting location: <%= location %> </h1>
 <h2> <%= radius %> </h2>
 <h3> <%= price %> </h3>
-<h4><%= name %> </h4>
+<p>You have searched by: <%= term %></p>
+<h4>Your result: <%= name %> </h4>
+
+
+
+<% include ./partials/footer %>
