Made sure div worked for food_picker

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -5,6 +5,6 @@
 <h3> <%= price %> </h3>
 <p>You have searched by: <%= term %></p>
 <h4>Your result: <%= name %> </h4>
-<div id="google_map"></div>
+<div><div id="google_map"></div></div>
 
 <% include ./partials/footer_results %>
