I put the google maps in the center, added a few tweaks onto the div

--- a/views/partials/result_google_maps.ejs
+++ b/views/partials/result_google_maps.ejs
@@ -3,7 +3,7 @@
 
 
 <script>(function () {
-  var setting = {"height":512,"width": window.innerWidth,"zoom":14,
+  var setting = {"height":512,"width": Math.floor(window.innerWidth/1.25) ,"zoom":14,
   "queryString":"<%= location_restaurant %>",
   "satellite":false,
   "centerCoord":[37.75771992816863,-122.43760000000003],
