--- a/public/stylesheets/results.css
+++ b/public/stylesheets/results.css
@@ -2,3 +2,9 @@ body {
     background: #eee8d5;
 }
 
+#google_map_holder {
+    vertical-align: middle;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
