--- a/views/results.ejs
+++ b/views/results.ejs
@@ -17,7 +17,7 @@
     <div class="col-sm-7">
       <div>
         <a href="<%= yelpURL%>"><h3><%= name %>'s Yelp Link</h3></a>
-        <img src= "<%= image %>">
+        <img src= "<%= image %>" class = "col-sm-auto">
       </div>
     </div>
   </div>
