--- a/views/results.ejs
+++ b/views/results.ejs
@@ -8,20 +8,24 @@
 
 <div class="container-fluid mt-4">
   <div class="row">
-    <div class="col-sm-5">
+    <div class="col-sm-6">
       <div id ="google_map_holder">
           <div id="google_map">
           </div>
       </div>
     </div>
-    <div class="col-sm-7">
+    <div class="col-sm-6">
       <div>
-        <a href="<%= yelpURL%>"><h3><%= name %>'s Yelp Link</h3></a>
-          <img src= "<%= image %>" class = "rounded img-fluid">
+        <img src= "<%= image %>" class = "rounded img-fluid">
       </div>
+    </div>
+  </div>
+  <div class ="row">
+    <div class =" col-sm-auto mt-3 mx-auto">
+      <a href="<%= yelpURL%>"><div type="button" class="btn btn-info"><h6><%= name %>'s Yelp Link</h6></div></a>
     </div>
   </div>
 </div>
 
 
-<% include ./partials/footer_results %>
+    <% include ./partials/footer_results %>
