--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,6 +1,47 @@
 <% include ./partials/header %>
 <!-- <script src="../public/functions.js"></script> -->
 
+<div class="container">
+  <% if(messages && messages.length > 0){ %>
+      <div class="alert alert-danger" role="alert">
+          <%= messages %>
+      </div>
+  <% } %>
+</div>
+
+<div class="container my-4">
+  <div id="carouselExample1" class="carousel slide z-depth-1-half peopleCarouselImg" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="/FoodImgs/salad.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/FoodImgs/ramen.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/FoodImgs/burger.jpg" alt="Third slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/FoodImgs/dumplings.jpg" alt="Fourth slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/FoodImgs/tacos.jpg" alt="Fifth slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="/FoodImgs/korean_dish.jpg" alt="Sixth slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExample1" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExample1" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
 <div class="container-fluid mt-4">
   <form action="/results" method="GET">
     <div class="row justify-content-center">
@@ -39,14 +80,14 @@
     </div>
     <div class="container">
         <div class="row">
-          <div class="col text-center">
+          <div class="col text-center mt-3">
             <button type = "submit" class="btn btn-primary">Submit!</button>
           </div>
         </div>
       </div>
   </form>
-  <h1><%= messages %></h1>
 </div>
+
 
 
  <!-- <a class="btn btn-primary" href="./results" role="button">OwO</a>  -->
