--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,6 +9,7 @@
   <% } %>
 </div>
 
+<div class="container fluid">
 <div class="container my-4">
   <div id="carouselExample1" class="carousel slide z-depth-1-half peopleCarouselImg" data-ride="carousel">
     <div class="carousel-inner">
@@ -87,6 +88,13 @@
       </div>
   </form>
 </div>
+
+<!-- <div class="container mt-3">
+  <button type="button" class="btn btn-info col text-center" data-toggle="collapse" data-target="#demo">About ⮟</button>
+  <div id="demo" class="collapse">
+    This website is used to randomly select a business based on your parameters!
+  </div>
+</div> -->
 
 
 
