--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,6 +7,6 @@
 <!-- My own Scripts -->
 <!-- <script src="../public/functions.js"></script> -->
   
-  
+  <a href="https://github.com/calvin-gao/FoodPicker">Github</a>
   </body>
 </html>
