--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/stylesheets/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500i&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -22,42 +24,11 @@
     
     <script src="" async defer></script>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-      <!--  Show this only on mobile to medium screens  -->
-        <a class="navbar-brand d-lg-none" href="#">FoodPicker</a>
-      
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      <!--  Use flexbox utility classes to change how the child elements are justified  -->
-        <div class="collapse navbar-collapse justify-content-between" id="navbarToggle">
-      
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-          </ul>
-          
-      <!--   Show this only lg screens and up   -->
-          <a class="navbar-brand d-none d-lg-block" href="#">FoodPicker</a>
-          
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-          </ul>
+    <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            <em><h1>FoodPicker</h1></em>
+            <hr/>
+          </div>
         </div>
-      </nav>
+      </div>
