--- a/views/main.ejs
+++ b/views/main.ejs
@@ -82,7 +82,14 @@
     <div class="container">
         <div class="row">
           <div class="col text-center mt-3">
-            <button type = "submit" class="btn btn-primary">Submit!</button>
+            <button type = "submit" class="btn btn-link">
+			  <div class="col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 text-center mx-auto">
+                <img src="pics/button1.png" class="img-fluid">
+                <div class="text centered">
+                  Submit!
+			    </div>
+              </div>
+            </button>
           </div>
         </div>
       </div>
