--- a/views/results.ejs
+++ b/views/results.ejs
@@ -37,13 +37,13 @@
   </div>
   <div class ="row">
     <div class =" col-sm-auto mt-3 mx-auto">
-      <a href="<%= yelpURL%>"><div type="button" class="btn btn-primary"><h6><%= name %>'s Yelp Link</h6></div></a>
+      <a href="<%= yelpURL%>"><div type="button" class="btn btn-primary shadow"><h6><%= name %>'s Yelp Link</h6></div></a>
     </div>
     <div class =" col-sm-auto mt-3 mx-auto">
-      <a href=""><div type="button" class="btn btn-secondary"><h6>Choose another restaurant</h6></div></a>
+      <a href=""><div type="button" class="btn btn-secondary shadow"><h6>Choose another restaurant</h6></div></a>
     </div>
     <div class =" col-sm-auto mt-3 mx-auto">
-      <a href="/"><div type="button" class="btn btn-secondary"><h6>Choose again</h6></div></a>
+      <a href="/"><div type="button" class="btn btn-secondary shadow"><h6>Choose again</h6></div></a>
     </div>
   </div>
 </div>
