small text updates
spelling/bolding elements

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -52,7 +52,7 @@
       </div>
       <div class="col-sm-3">
         <div class="form-group">
-            <label for="distance">Distance from location (Miles)</label>
+            <label for="distance">Distance (Miles)</label>
             <select class="form-control" name= userRequest[distance] id="distance">
               <option value= "8047">5</option>
               <option value= "16094">10</option>
@@ -76,7 +76,7 @@
     <div class="row justify-content-center">
       <div class="col-sm-3">
           <label for="searchTerm">Seach By</label>
-          <input type="text" id="searchTerm" class="form-control" name= userRequest[searchTerm] placeholder="Ex: food/resturants/names">
+          <input type="text" id="searchTerm" class="form-control" name= userRequest[searchTerm] placeholder="Ex: food/restaurants/names">
         </div>
     </div>
     <div class="container">
