--- a/views/results.ejs
+++ b/views/results.ejs
@@ -3,17 +3,17 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col text-center">
-      <h1> Your starting location: <%= location %> </h1>
+      <h2> Your starting location: <em><%= location %></em> </h2>
     </div>
   </div>
   <div class="row">
     <div class="col text-center">
-      <p>You have searched by: <%= term %></p>
+      <h4>You have searched by: <em><%= term %></em></h4>
     </div>
   </div>
   <div class="row">
     <div class="col text-center">
-      <h4>Your result: <%= name %> </h4>
+      <h3>Your result: <em><%= name %></em></h3>
     </div>
   </div>
 
