--- a/views/main.ejs
+++ b/views/main.ejs
@@ -85,7 +85,7 @@
             <button type = "submit" class="btn btn-link">
 			  <div class="col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 text-center mx-auto">
                 <img src="pics/button1.png" class="img-fluid">
-                <div class="text centered">
+                <div class="text centered white_font">
                   Submit!
 			    </div>
               </div>
