--- a/views/main.ejs
+++ b/views/main.ejs
@@ -82,9 +82,9 @@
     <div class="container">
         <div class="row">
           <div class="col text-center mt-3">
-            <button type = "submit" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 text-center mx-auto">
+            <button type = "submit" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 text-center mx-auto white_font">
                 <img src="pics/button1.png" class="img-fluid">
-                <div class="text centered white_font">
+                <div class="text centered">
                   Submit!
 			    </div>
             </button>
