--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,6 +9,13 @@ body {
     max-height: 550px;
 }
 
+#github-link
+{
+    font-size: large;
+    border-style: solid;
+    border-width: 5px;
+}
+
 hr {
     border: 0;
     height: 1px;
