--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -42,6 +42,14 @@ hr {
     color: #d11717;
 }
 
+.transparent {
+    background-color: #00000000 !important;
+    border:none !important;
+}
+.relative {
+    position: relative;
+}
+
 
 
 /* 
