--- a/views/main.ejs
+++ b/views/main.ejs
@@ -49,16 +49,17 @@
         <label for="InputLocation">Location</label>
         <input type="text" id="InputLocation" class="form-control" name= userRequest[location] placeholder="location">
       </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 relative">
         <div class="form-group">
-            <label for="distance">Distance (Miles)</label>
-            <select class="form-control" name= userRequest[distance] id="distance">
-              <option value= "8047">5</option>
-              <option value= "16094">10</option>
-              <option value= "24141">15</option>
-              <option value= "32187">20</option>
-              <option value= "39999">25</option>
-            </select>
+			<label for="distance">Distance (Miles)</label>
+            <img src="pics/form1.png" class="img-fluid">
+			<select class="form-control transparent centered" name= userRequest[distance] id="distance">
+				<option value= "8047">5</option>
+				<option value= "16094">10</option>
+				<option value= "24141">15</option>
+				<option value= "32187">20</option>
+				<option value= "39999">25</option>
+			</select>
           </div>
       </div>
       <div class="form-group">
