--- a/views/main.ejs
+++ b/views/main.ejs
@@ -50,10 +50,10 @@
         <input type="text" id="InputLocation" class="form-control" name= userRequest[location] placeholder="location">
       </div>
       <div class="col-sm-3 relative">
-        <div class="form-group">
-			<label for="distance">Distance (Miles)</label>
-            <img src="pics/form1.png" class="img-fluid">
-			<select class="form-control transparent centered" name= userRequest[distance] id="distance">
+        <img src="pics/form1.png" width="100%">
+        <div class="form-group centered">
+			<label for="distance"><font size="2">Distance (Miles)</font></label>
+			<select class="form-control transparent" name= userRequest[distance] id="distance">
 				<option value= "8047">5</option>
 				<option value= "16094">10</option>
 				<option value= "24141">15</option>
