--- a/views/main.ejs
+++ b/views/main.ejs
@@ -49,9 +49,9 @@
         <label for="InputLocation">Location</label>
         <input type="text" id="InputLocation" class="form-control" name= userRequest[location] placeholder="location">
       </div>
-      <div class="col-sm-3 relative">
-        <img src="pics/form1.png" width="100%">
-        <div class="form-group centered">
+      <div class="col-sm-5 relative">
+        <img src="pics/form1.png" class="img-fluid">
+        <div class="form-group centered col-sm-9">
 			<label for="distance"><font size="2">Distance (Miles)</font></label>
 			<select class="form-control transparent" name= userRequest[distance] id="distance">
 				<option value= "8047">5</option>
