added changes to style

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -53,7 +53,7 @@
         <img src="pics/form1.png" class="img-fluid">
         <div class="form-group centered col-sm-9">
 			<label for="distance"><font size="2">Distance (Miles)</font></label>
-			<select class="form-control transparent" name= userRequest[distance] id="distance">
+			<select class="form-control rounded-0 transparent" name= userRequest[distance] id="distance">
 				<option value= "8047">5</option>
 				<option value= "16094">10</option>
 				<option value= "24141">15</option>
