--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="row">
           <div class="col text-center">
-            <em><h1>FoodPicker</h1></em>
+            <em><h1><font color="white">FoodPicker</font></h1></em>
             <hr/>
           </div>
         </div>
