--- a/views/results.ejs
+++ b/views/results.ejs
@@ -13,7 +13,7 @@
   </div>
   <div class="row">
     <div class="col text-center">
-      <h3>Your result: <em><%= name %></em></h3>
+      <h3>Your result: </h3><h1><em><%= name %></em></h1>
     </div>
   </div>
 
