--- a/views/main.ejs
+++ b/views/main.ejs
@@ -93,7 +93,7 @@
           <div class="col text-center mt-3">
             <button type = "submit" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 text-center mx-auto white_font">
                 <img src="pics/button1.png" class="img-fluid">
-                <div class="text centered">
+                <div class="text centered font_size">
                   Submit!
 			    </div>
             </button>
