--- a/views/results.ejs
+++ b/views/results.ejs
@@ -13,7 +13,7 @@
   </div>
   <div class="row">
     <div class="col text-center">
-      <h3>Your result: </h3><h1><em><%= name %></em></h1>
+      <h3>Your result: </h3><h1 class ="bottom_border"><em><%= name %></em></h1>
     </div>
   </div>
 
@@ -31,21 +31,22 @@
     </div>
     <div class="col-sm-6">
       <div>
-        <img src= "<%= image %>" class = "rounded img-fluid">
+        <img src="<%= image %>" class = "rounded img-fluid">
       </div>
     </div>
   </div>
-  <div class ="row">
-    <div class =" col-sm-auto mt-3 mx-auto">
-      <a href="<%= yelpURL%>"><div type="button" class="btn btn-primary shadow"><h6><%= name %>'s Yelp Link</h6></div></a>
-    </div>
-    <div class =" col-sm-auto mt-3 mx-auto">
-      <a href=""><div type="button" class="btn btn-secondary shadow"><h6>Choose another restaurant</h6></div></a>
-    </div>
-    <div class =" col-sm-auto mt-3 mx-auto">
-      <a href="/"><div type="button" class="btn btn-secondary shadow"><h6>Choose again</h6></div></a>
-    </div>
-  </div>
+  <a href="<%= yelpURL%>"><div type="button" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 mx-3 white_font">
+        <img src="pics/button2.png" class="img-fluid">
+        <h6 size="auto" class="font_size centered wrap-around col-9"><%= name %>'s <br/> Yelp Link</h6>
+      </div></a>
+      <a href=""><div type="button" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 mx-3 white_font">
+        <img src="pics/button3.png" class="img-fluid">
+        <h6 size="auto" class="font_size text centered col-9">Choose another <br/> restaurant</h6>
+      </div></a>
+      <a href="/"><div type="button" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 mx-3 white_font">
+        <img src="pics/button4.png" class="img-fluid">
+        <h6 class="font_size text centered col-9">Choose again</h6>
+      </div></a>
 </div>
 
 
