--- a/views/main.ejs
+++ b/views/main.ejs
@@ -47,14 +47,14 @@
     <div class="row justify-content-center">
       <div class="col-sm-4 relative">
         <img src="pics/form2.png" class="img-fluid" />
-        <div class="centered col-sm-9">
+        <div class="centered col-9">
           <label for="InputLocation"><font size="2">Location</font></label>
-          <input type="text" id="InputLocation" class="form-control rounded-0 transparent" name= userRequest[location] placeholder="Location">
+          <input type="text" id="InputLocation" class="form-control rounded-0 transparent font_size" name= userRequest[location] placeholder="Location">
         </div>
       </div>
       <div class="col-sm-4 relative">
         <img src="pics/form2.png" class="img-fluid" />
-        <div class="form-group centered col-sm-9">
+        <div class="form-group centered col-9">
 			<label for="distance"><font size="2">Distance (Miles)</font></label>
 			<select class="form-control rounded-0 transparent" name= userRequest[distance] id="distance">
 				<option value= "8047">5</option>
@@ -67,7 +67,7 @@
       </div>
 	  <div class="col-sm-3 relative">
 	    <img src="pics/form3.png" class="img-fluid" />
-        <div class="form-group centered col-sm-9">
+        <div class="form-group centered col-9">
           <label for="priceRange"><font size="2">Price Range</font></label>
           <select class="form-control rounded-0 transparent" name= userRequest[priceRange] id="priceRange">
             <option value= "1">$</option>
@@ -80,11 +80,11 @@
 	  </div>
     </div>
     <div class="row justify-content-center mt-4">
-      <div class="col-sm-8">
+      <div class="col-12 col-sm-11 col-md-10 col-lg-9 col-xl-8">
         <img src="pics/form4.png" class="img-fluid" />
-		<div class="col-sm-9 centered">
+		<div class="col-9 centered font_size">
           <label for="searchTerm"><font size="2">Seach By</font></label>
-          <input type="text" id="searchTerm" class="form-control rounded-0 transparent" name= userRequest[searchTerm] placeholder="Ex: food/restaurants/names" />
+          <input type="text" id="searchTerm" class="form-control rounded-0 transparent font_size" name= userRequest[searchTerm] placeholder="Ex: food/restaurants/names" />
 		</div>
       </div>
     </div>
