added more style
changed style again

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -37,7 +37,7 @@
   </div>
   <a href="<%= yelpURL%>"><div type="button" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 mx-3 white_font">
         <img src="pics/button2.png" class="img-fluid">
-        <h6 size="auto" class="font_size centered wrap-around col-9"><%= name %>'s <br/> Yelp Link</h6>
+        <h6 size="auto" class="font_size centered text-truncate col-9"><%= name %>'s <br/> Yelp Link</h6>
       </div></a>
       <a href=""><div type="button" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 mx-3 white_font">
         <img src="pics/button3.png" class="img-fluid">
