--- a/views/results.ejs
+++ b/views/results.ejs
@@ -35,15 +35,15 @@
       </div>
     </div>
   </div>
-  <a href="<%= yelpURL%>"><div type="button" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 mx-3 white_font">
+  <a href="<%= yelpURL%>"><div type="button" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 mx-3 transparent white_font">
         <img src="pics/button2.png" class="img-fluid">
-        <h6 size="auto" class="font_size centered text-truncate col-9"><%= name %>'s <br/> Yelp Link</h6>
+        <h6 size="auto" class="font_size centered wrap-around col-9"><%= name %>'s <br/> Yelp Link</h6>
       </div></a>
-      <a href=""><div type="button" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 mx-3 white_font">
+      <a href=""><div type="button" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 mx-3 transparent white_font">
         <img src="pics/button3.png" class="img-fluid">
         <h6 size="auto" class="font_size text centered col-9">Choose another <br/> restaurant</h6>
       </div></a>
-      <a href="/"><div type="button" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 mx-3 white_font">
+      <a href="/"><div type="button" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 transparent white_font">
         <img src="pics/button4.png" class="img-fluid">
         <h6 class="font_size text centered col-9">Choose again</h6>
       </div></a>
