--- a/views/partials/header_results.ejs
+++ b/views/partials/header_results.ejs
@@ -25,7 +25,7 @@
 
     <div class="container">
         <div class="row">
-          <div class="col text-center">
+          <div class="col text-center" style="color:white">
             <h1>FoodPicker</h1>
             <hr/>
           </div>
