--- a/views/results.ejs
+++ b/views/results.ejs
@@ -2,17 +2,17 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col text-center" style="color:white">
+    <div class="col text-center buttons">
       <h2> Your starting location: <em><%= location %></em> </h2>
     </div>
   </div>
   <div class="row">
-    <div class="col text-center" style="color:white">
+    <div class="col text-center buttons" >
       <h4>You have searched by: <em><%= term %></em></h4>
     </div>
   </div>
   <div class="row">
-    <div class="col text-center" style="color:white">
+    <div class="col text-center buttons">
       <h3>Your result: </h3><h1 class ="bottom_border"><em><%= name %></em></h1>
     </div>
   </div>
@@ -35,6 +35,7 @@
       </div>
     </div>
   </div>
+  
   <a href="<%= yelpURL%>"><div type="button" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 mx-3 transparent white_font">
         <img src="pics/button2.png" class="img-fluid">
         <h6 size="auto" class="font_size centered wrap-around col-9"><%= name %>'s <br/> Yelp Link</h6>
