--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -60,7 +60,63 @@ hr {
     font-size: 3vh;
 }
 
+div.form4 {
+    background-image: url("../pics/form4.png");
+    width: auto;
+    background-size: cover;
+    max-width: 100%;
+    max-height: 100%;
+    background-repeat: no-repeat;
+}
 
+@media screen and (max-width: 560px) {
+    div.form4 {
+        background-image: url("../pics/form2.png");
+    }
+}
+
+div.form3 {
+    background-image: url("../pics/form3.png");
+    width: auto;
+    background-size: cover;
+    max-width: 100%;
+    max-height: 100%;
+    background-repeat: no-repeat;
+}
+
+div.form2 {
+    background-image: url("../pics/form2.png");
+    width: auto;
+    background-size: cover;
+    max-width: 100%;
+    max-height: 100%;
+    background-repeat: no-repeat;
+}
+
+div.form1 {
+    background-image: url("../pics/form1.png");
+    width: auto;
+    background-size: cover;
+    max-width: 100%;
+    max-height: 100%;
+    background-repeat: no-repeat;
+}
+
+.py-2p5 {
+    padding-bottom: 1.5rem !important;
+}
+
+.py-3p5 {
+    padding-bottom: 2.3rem !important;
+}
+
+.py-4p5 {
+    padding-bottom: .6rem !important;
+}
+
+.py-4p5 {
+    padding-bottom: 1.3rem !important;
+}
 /* 
 this is for drop down if we use
 [data-toggle="collapse"] i:before{
