--- a/views/results.ejs
+++ b/views/results.ejs
@@ -2,17 +2,17 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col text-center buttons">
+    <div class="col text-center headers">
       <h2> Your starting location: <em><%= location %></em> </h2>
     </div>
   </div>
   <div class="row">
-    <div class="col text-center buttons" >
+    <div class="col text-center headers" >
       <h4>You have searched by: <em><%= term %></em></h4>
     </div>
   </div>
   <div class="row">
-    <div class="col text-center buttons">
+    <div class="col text-center headers">
       <h3>Your result: </h3><h1 class ="bottom_border"><em><%= name %></em></h1>
     </div>
   </div>
