--- a/views/main.ejs
+++ b/views/main.ejs
@@ -45,7 +45,7 @@
 <div class="container-fluid mt-4">
   <form action="/results" method="GET">
     <div class="row justify-content-center">
-      <div class="col-sm-5 relative">
+      <div class="col-lg-5 relative">
 		<div class="form1">
         <div class="py-4p5 px-auto m-auto col-10">
 		  <div class="form-group py-auto mx-auto">
@@ -55,7 +55,7 @@
         </div>
 	  </div>
       </div>
-      <div class="col-sm-4 relative">
+      <div class="col-lg-4 relative">
         <div class="form2">
         <div class="form-group py-3p5 px-auto m-auto col-10">
 			<label for="distance"><font size="2">Distance (Miles)</font></label>
@@ -69,7 +69,7 @@
           </div>
 		  </div>
       </div>
-	  <div class="col-sm-3 relative">
+	  <div class="col-lg-3 relative">
 	  <div class="form3">
         <div class="form-group py-2p5 px-auto m-auto col-10">
           <label for="priceRange"><font size="2">Price Range</font></label>
@@ -98,10 +98,11 @@
         <div class="row">
           <div class="col text-center mt-3">
             <button type = "submit" class="btn btn-link col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 text-center mx-auto white_font">
-                <img src="pics/button1.png" class="img-fluid">
-                <div class="text centered font_size">
+			  <div class="button1">
+              <div class="text font_size py-5">
                   Submit!
 			    </div>
+		      </div>
             </button>
           </div>
         </div>
