added icon to header

--- a/views/partials/header_results.ejs
+++ b/views/partials/header_results.ejs
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="row">
           <div class="col text-center" style="color:white">
-            <h1>FoodPicker</h1>
+            <em><h1><font color="white">FoodPicker <i class="fas fa-hand-pointer"></i></font></h1></em>
             <hr/>
           </div>
         </div>
