logo hover link

--- a/views/partials/header_results.ejs
+++ b/views/partials/header_results.ejs
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./stylesheets/results.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500i&display=swap" rel="stylesheet">
+    <link href="../FontAwesome/fontawesome-free-5.10.2-web/css/all.css" rel="stylesheet"> <!--load all styles -->
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -25,8 +26,8 @@
 
     <div class="container">
         <div class="row">
-          <div class="col text-center" style="color:white">
-            <em><h1><font color="white">FoodPicker <i class="fas fa-hand-pointer"></i></font></h1></em>
+          <div class="col text-center">
+            <em><h1><a href="/"><font color="white">FoodPicker</a><i class="fas fa-hand-pointer"></i></font></h1></em>
             <hr/>
           </div>
         </div>
