--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,12 @@
     <div class="container">
         <div class="row">
           <div class="col text-center">
-            <em><h1><a href="/"><font color="white">FoodPicker<i class="fas fa-hand-pointer"></i></font></a></h1></em>
+            <em><h1><a href="/"><font color="white">FoodPicker
+              <span class="fade">
+                <i class="fas fa-hand-pointer">
+                  </i>
+                </span>
+            </font></a></h1></em>
             <a id="github-link" href="https://github.com/calvin-gao/FoodPicker">Github <i class="fab fa-github"></i></a>
             <hr/>
           </div>
