--- a/views/partials/header_results.ejs
+++ b/views/partials/header_results.ejs
@@ -27,7 +27,12 @@
     <div class="container">
         <div class="row">
           <div class="col text-center">
-            <em><h1><a href="/"><font color="white">FoodPicker</a><i class="fas fa-hand-pointer"></i></font></h1></em>
+            <em><h1><a href="/"><font color="white">FoodPicker
+              <span class="fade">
+                  <i class="fas fa-hand-pointer">
+                    </i>
+                </span>
+              </font></a></h1></em>
             <hr/>
           </div>
         </div>
