--- a/views/main.ejs
+++ b/views/main.ejs
@@ -10,8 +10,8 @@
 
 <div class="container fluid">
 <div class="container my-4">
-  <div id="carouselExample1" class="carousel slide z-depth-1-half peopleCarouselImg" data-ride="carousel">
-    <div class="carousel-inner">
+  <div id="carouselExample1" class="carousel slide peopleCarouselImg" data-ride="carousel">
+    <div class="carousel-inner size mx-auto">
       <div class="carousel-item active">
         <img class="d-block w-100" src="/FoodImgs/salad.jpg" alt="First slide">
       </div>
