--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,9 +4,13 @@ body {
 }
 
 .peopleCarouselImg img {
-    width: auto;
-    height: 550px;
-    max-height: 550px;
+    width: 100%;
+    height: 100%;
+}
+
+.size {
+    width: 50vw;
+    height: auto;
 }
 
 #github-link
@@ -99,7 +103,6 @@ div.form3 {
 div.form2 {
     background-image: url("../pics/form2.png");
     width: auto;
-    background-size: contain;
     max-width: 100%;
     max-height: 100%;
     background-repeat: no-repeat;
@@ -124,7 +127,6 @@ div.button1 {
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
-
 
 .py-2p5 {
     padding-bottom: 1.7rem !important;
