--- a/views/main.ejs
+++ b/views/main.ejs
@@ -88,7 +88,7 @@
       <div class="col-12 col-sm-11 col-md-10 col-lg-9 col-xl-8">
         <div class="form4">
 		<div class="col-10 py-5p5 px-auto m-auto font_size">
-          <label for="searchTerm"><font size="2">Seach By</font></label>
+          <label for="searchTerm"><font size="2">Search By</font></label>
           <input type="text" id="searchTerm" class="form-control rounded-0 transparent" name= userRequest[searchTerm] placeholder="Ex: food/restaurants/names" />
         </div>
         </div>
